[gd_scene load_steps=4 format=3 uid="uid://bcstc36el7gw2"]

[ext_resource type="Script" uid="uid://ob4xsqxgnua2" path="res://tools/upgrade_editor/upgrade_tree_editor.gd" id="1_lr88f"]
[ext_resource type="PackedScene" uid="uid://d1oxjb362g2rw" path="res://tools/upgrade_editor/editor_canvas.tscn" id="2_lr88f"]
[ext_resource type="Script" uid="uid://d0g3pmb5mdyjs" path="res://tools/upgrade_editor/dependency_overlay.gd" id="2_mshn7"]

[node name="UpgradeTreeEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_lr88f")

[node name="EditorCanvas" parent="." instance=ExtResource("2_lr88f")]
unique_name_in_owner = true
layout_mode = 1

[node name="DependencyOverlay" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_mshn7")

[node name="Toolbar" type="HBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -437.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0

[node name="AddNodeButton" type="Button" parent="Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "Add Node"

[node name="SaveNameLabel" type="Label" parent="Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "UNSAVED"

[node name="SaveButton" type="Button" parent="Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"

[node name="SaveAsButton" type="Button" parent="Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "Save As"

[node name="LoadButton" type="Button" parent="Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "Load"

[node name="ClearAllButton" type="Button" parent="Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear All"

[node name="SaveAsDialog" type="Window" parent="."]
unique_name_in_owner = true
position = Vector2i(36, 36)
size = Vector2i(150, 100)
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="SaveAsDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FileNameEdit" type="LineEdit" parent="SaveAsDialog/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="SaveAsDialog/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "confirm"

[connection signal="pressed" from="Toolbar/AddNodeButton" to="." method="_on_add_node_button_pressed"]
[connection signal="pressed" from="Toolbar/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Toolbar/SaveAsButton" to="." method="_on_save_as_button_pressed"]
[connection signal="pressed" from="Toolbar/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="Toolbar/ClearAllButton" to="." method="_on_clear_all_button_pressed"]
[connection signal="pressed" from="SaveAsDialog/VBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
